[package]
name = "bfi"
version = "0.1.0"
authors = ["Addison Heavner <aaheavner@mix.wvu.edu>", "Brian Sweeney", "Kharon Harrell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto=true

[dependencies]
clap = "2.33.0"